<resources>
    <string name="app_name">WSLion</string>
    <string name="name">Name</string>
    <string name="size">Size</string>
    <string name="color">Color</string>
    <string name="sex">Sex</string>
    <string name="age">Age</string>
    <string name="guargar">Guargar</string>
    <string name="listar">Listar</string>
    <string name="weight">Weight</string>
    <string name="location">Location</string>
</resources>
